[package]
name = "ploscan"
version = "0.1.1"
authors = ["coin <coin@coin.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.3.6"
clap = "2.32.0"
log = "0.4"
#env_logger = "0.7.1"
#log4rs = { version = "0.8", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
futures = "0.1"
tokio = "0.1"
async-std = "1.6"
ureq = { version = "1.3", features = ["json", "charset"] }
#tokio = { version = "0.2", features = ["full"] }
#reqwest = { version = "0.10", features = ["json"] }
reqwest = { version = "0.9.9", default-features = false, features = ["rustls-tls"] }
log4rs = { version = "0.8", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
bytes = "0.4.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
url = "1.7"
url_serde = "0.2"
hex = "0.3"
hex_d_hex = "1.0.1"
num_cpus = "1.9"
#raw-cpuid = "6.1.0"
aligned_alloc = "0.1.3"
sys-info = "0.5.6"
cfg-if = "0.1.6"
pbr = "1.0.1"
humanize-rs = "0.1.5"
pretty-hex = "0.1.1"
rustc-serialize = "0.3"
core_affinity = "0.5.9"
stopwatch = "0.0.7"
fs2 = "0.4.3"
page_size = "0.4.1"
libc = "0.2.46"
rayon = "1.0.3"
cmd_lib = "0.7.8"
json = "0.12.4"
bip39 = "*"
easy-hasher = "2.1.1"
bigint = "4"
rand = "0.6"
filetime = "0.2"
rust-crypto = "0.2.36"

#cpuid = "*"

[target.'cfg(linux)'.dependencies]
thread-priority = "0.1.0"

[build-dependencies]
cc = "1.0"

#[dev-dependencies]
#rust-crypto = "0.2.36"


[source.rustcc]
registry = "https://code.aliyun.com/rustcc/crates.io-index.git"